# beller

./: Cargo.toml
beller-cli/: Cargo.toml  README.md  TODO.md
beller-cli/src/: cli.rs  config.rs  crypto.rs  handlers.rs  main.rs  session.rs
beller-cli/src/config/: mod.rs
beller-cli/src/impls/: crypto.rs  defs.rs  did.rs  labeler.rs  mod.rs  plc.rs  repo.rs  session.rs
beller-cli/src/impls/api/: crypto.rs  did.rs  mod.rs  plc.rs  repo.rs  session.rs
beller-lib/: Cargo.toml
beller-lib/src/: identity.rs  lib.rs  repo.rs  session.rs
