[package]
name = "beller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
atrium-api = "0.24.8"
atrium-crypto = "0.1"
beller-lib = { path = "../beller-lib" }
clap = { version = "4", features = ["derive"] }
directories = "5"
ipld-core = "0.4"
multibase = "0.9"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse"] }
